<resources>
    <!--General-->
    <string name="app_name">Abletive音乐社区</string>
    <string name="app_sub_lower">abletive.com</string>
    <string name="app_sub_upper">ABLETIVE.COM</string>
    <string name="action_settings">Settings</string>
    <string name="exit_confirm">再次点击关闭</string>
    <string name="todo">Android客户端暂时未有该功能</string>

    <!--Loading-->
    <string name="loading">Loading...</string>

    <!--FloatingActionButton-->
    <string name="all">全部</string>
    <string name="tag">标签</string>
    <string name="category">类别</string>
    <string name="time">时间</string>

    <!--Search bar-->
    <string name="search_icon">search</string>
    <string name="author_icon">author</string>
    <string name="all_icon">all</string>

    <!--Post-->
    <string name="post">文章</string>
    <string name="portrait">竖屏模式</string>
    <string name="landscape">横屏模式</string>
    <string name="comment_hint">评论一下,说点什么吧...</string>
    <string name="publish">发表</string>
    <string name="post_wait">文章列表加载中>>></string>
    <string name="comment">评论</string>
    <string name="star">收藏</string>
    <string name="share">分享</string>

    <!--Message-->
    <string name="title_activity_message">消息</string>

    <!--BBS-->
    <string name="title_activity_bbs">论坛</string>

    <!--User-->
    <string name="title_activity_user">我</string>
    <string name="none_login">登录或注册享受更多功能</string>
    <string name="welcome_text">欢迎回来</string>
    <string name="default_user_name">Alan.Delip</string>
    <string name="no_login">未登录</string>
    <string name="sign">签到</string>
    <string name="user_name">您的用户名</string>
    <string name="user_password">您的密码</string>
    <string name="login">登录</string>
    <string name="no_account">还没有帐号？赶紧注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="sign_username">注册用户名</string>
    <string name="sign_display_name">显示的昵称</string>
    <string name="sign_password">注册密码</string>
    <string name="password_again">再输入一次密码</string>
    <string name="sign_email">注册邮箱地址</string>
    <string name="sign_up">注册</string>
    <string name="login_fail">登录失败，请检查用户名和密码</string>
    <string name="multiple_usernames">用户名已被注册请更换</string>
    <string name="username_short">用户名过短，应长于4位</string>
    <string name="username_character">用户名不应包含中文字符</string>
    <string name="password_short">密码过短，应长于6位</string>
    <string name="password_character">密码不用包含中文字符</string>
    <string name="password_dismatch">2次密码不匹配</string>
    <string name="email_invalid">邮箱输入不符合规范</string>
    <string name="displayname_null">请输入昵称</string>
    <string name="collections">我的收藏</string>
    <string name="personal_info">个人资料</string>
    <string name="personal_page">个人主页</string>
    <string name="my_member">我的会员</string>
    <string name="scan_matrix">扫二维码</string>
    <string name="my_matrix">我的名片</string>
    <string name="avatar_text">头像</string>
    <string name="public_info">公开信息</string>
    <string name="private_info">私人信息</string>
    <string name="gender">性别</string>
    <string name="displayname">昵称</string>
    <string name="personal_description">个人介绍</string>
    <string name="weibo_text">微博</string>
    <string name="qq_text">QQ</string>
    <string name="community_info">社交信息</string>
    <string name="see_only">只有您自己可见</string>
    <string name="modify_password">修改密码</string>
    <string name="sign_out">注销</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="public_reminder">他人可以在您的个人主页看到以上内容</string>
    <string name="login_username">登录用户名</string>
    <string name="email_text">邮箱</string>
    <string name="post_comment">文章评论</string>
    <string name="post_collection">文章收藏</string>
    <string name="community_credits">社区积分</string>
    <string name="self">自己</string>
    <string name="basic_info">基本信息</string>
    <string name="community_id">社区ID</string>
    <string name="community_page">社区个人主页网址</string>
    <string name="unknown_gender">未知性别</string>
    <string name="personal_web">个人网站</string>
    <string name="member_info">会员信息</string>
    <string name="due_time">到期时间</string>
    <string name="member_state_ordered">已开通会员</string>
    <string name="member_state_unordered">未开通会员</string>
    <string name="shop_orders">商城订单</string>

    <!--Internet Handle-->
    <string name="internet_failure">连接失败</string>
    <string name="reach_last">已经加载完</string>

    <!--Internet Request-->
    <string name="get_posts">get_posts</string>
    <string name="get_tag_index">get_tag_index</string>
    <string name="get_category_index">get_category_index</string>
    <string name="get_category_posts">get_category_posts</string>
    <string name="get_tag_posts">get_tag_posts</string>
    <string name="get_date_posts">get_date_posts</string>
    <string name="get_author_posts">get_author_posts</string>
    <string name="get_search_results">get_search_results</string>
    <string name="get_post">get_post</string>
    <string name="page">page</string>
    <string name="cookie">cookie</string>
    <string name="ignore_sticky_posts">ignore_sticky_posts</string>
    <string name="id">id</string>
    <string name="search">search</string>
    <string name="date">date</string>
    <string name="generate_auth_cookie">generate_auth_cookie</string>
    <string name="auth">auth</string>
    <string name="user">user</string>
    <string name="register">register</string>
    <string name="get_currentuserinfo">get_currentuserinfo</string>
    <string name="get_userinfo">get_userinfo</string>
    <string name="get_avatar">get_avatar</string>
    <string name="get_personal_page_detail">get_personal_page_detail</string>
    <string name="get_follow_list">get_follow_list</string>
    <string name="daily_checkin">daily_checkin</string>
    <string name="follow_act">follow_act</string>
    <string name="get_comment_list">get_comment_list</string>
    <string name="like_post">like_post</string>
    <string name="collect">collect</string>
    <string name="get_user_profile">get_user_profile</string>
    <string name="update_user_avatar">update_user_avatar</string>
    <string name="membership">membership</string>
    <string name="get_collection_list">get_collection_list</string>
    <string name="get_credit_list">get_credit_list</string>
    <string name="respond">respond</string>
    <string name="submit_comment">submit_comment</string>
    <string name="get_notifications">get_notifications</string>
    <string name="get_inbox">get_inbox</string>
    <string name="chat_messages">chat_messages</string>
    <string name="send_private_message">send_private_message</string>
    <string name="get_credit_ranks">get_credit_ranks</string>
    <string name="payment_succeeded">payment_succeeded</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="user_pass">user_pass</string>
    <string name="email">email</string>
    <string name="display_name">display_name</string>
    <string name="nonce">nonce</string>
    <string name="controller">controller</string>
    <string name="method">method</string>
    <string name="user_id">user_id</string>
    <string name="current_user_id">current_user_id</string>
    <string name="type">type</string>
    <string name="followed">followed</string>
    <string name="act">act</string>
    <string name="pid">pid</string>
    <string name="post_id">post_id</string>
    <string name="avatar">avatar</string>
    <string name="fromUserID">fromUserID</string>
    <string name="passphrase">passphrase</string>
    <string name="content">content</string>
    <string name="limit">limit</string>
    <string name="vip_type">vip_type</string>
    <string name="api">api</string>
    <string name="get_nonce">get_nonce</string>
    <string name="ok">ok</string>
    <string name="success">success</string>
    <string name="credit">credit</string>
    <string name="following">following</string>
    <string name="follower">follower</string>
    <string name="parent">parent</string>

    <!--Test-->
    <string name="chinese_long_text">这是一条中文的测试，用于测试是否在结尾处会有长句子的隐藏效果，测试文字格式和其他一些设置到底对不对</string>
    <string name="title_activity_tag">标签</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_log">登录</string>
    <string name="title_activity_person_info">PersonInfoActivity</string>
    <string name="title_activity_personal_page">PersonalPageActivity</string>
    <string name="title_activity_follow">FollowActivity</string>
    <string name="title_activity_personal_card">PersonalCardActivity</string>
    <string name="title_activity_colection">ColectionActivity</string>
    <string name="title_activity_rank_board">积分排行榜</string>
    <string name="title_activity_credit">CreditActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_comment_list">CommentListActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
</resources>
