<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="abletive.presentation.fragment.LoginFragment">

    <ImageView
        android:id="@+id/sign_in_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:scaleType="centerCrop"
        android:src="@drawable/sign_background" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo_light" />

    <ImageView
        android:id="@+id/username_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/close"
        android:layout_below="@+id/imageView2"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/account" />

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/close"
        android:layout_below="@+id/username_icon"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/password" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/username_icon"
        android:layout_alignTop="@+id/username_icon"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/username_icon"
        android:background="@color/transparent"
        android:gravity="center"
        android:hint="@string/user_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password_icon"
        android:layout_alignTop="@+id/password_icon"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/password_icon"
        android:background="@color/transparent"
        android:gravity="center"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password_icon"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="@color/orange"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/no_account"
        android:textColor="@color/orange"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/app_sub_upper"
        android:textColor="@color/gray" />

</RelativeLayout>
