<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/menu_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="abletive.presentation.activity.SignupActivity">
    <ImageView
        android:id="@+id/sign_in_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/dj" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/btn_close" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo_light" />

    <ImageView
        android:id="@+id/username_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/close"
        android:layout_below="@+id/imageView2"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/account" />

    <ImageView
        android:id="@+id/display_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/close"
        android:layout_below="@+id/username_icon"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/account" />

    <EditText
        android:id="@+id/display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/display_icon"
        android:layout_alignTop="@id/display_icon"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/display_icon"
        android:background="@color/transparent"
        android:hint="@string/sign_display_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/close"
        android:layout_below="@+id/display_icon"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/password" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/username_icon"
        android:layout_alignTop="@+id/username_icon"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/username_icon"
        android:background="@color/transparent"
        android:hint="@string/sign_username"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password_icon"
        android:layout_alignTop="@+id/password_icon"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/password_icon"
        android:background="@color/transparent"
        android:hint="@string/sign_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/password_again_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/close"
        android:layout_below="@+id/password_icon"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/password" />

    <EditText
        android:id="@+id/password_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password_again_icon"
        android:layout_alignTop="@+id/password_again_icon"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/password_again_icon"
        android:background="@color/transparent"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/close"
        android:layout_below="@+id/password_again_icon"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email_icon"
        android:layout_alignTop="@+id/email_icon"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/email_icon"
        android:background="@color/transparent"
        android:hint="@string/sign_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email_icon"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/azure"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/app_sub_upper"
        android:textColor="@color/gray" />

</RelativeLayout>
